--- a/conf/board.conf.sample
+++ b/conf/board.conf.sample
@@ -8,8 +8,8 @@ DBUser              db_user
 DBPasswd            db_passwd
 
 # Cookie
-SessionName         bw_cafe24_session
-SessionDomain       .bawi.org
+SessionName         bawi_session
+SessionDomain       .your.domain.name
 LoginSuccess        ../main/index.cgi
 LoginURL            ../main/login.cgi
 PasswdURL           ../user/passwd.cgi
@@ -24,7 +24,7 @@ SelfRegistration    0
 DefaultSkin         default
 
 # Attachment upload directory (DO NOT include '/' at the end.)
-AttachDir           /home/bawi/xboard_attach
+AttachDir           /path/to/attachment/dir
 
 # Character set
 CharSet             utf-8
@@ -40,7 +40,7 @@ AllowAnonBoard      0
 AllowAttach         1
 
 # HTML Title
-HTMLTitle           천년바위
+HTMLTitle           Bawi
 
 GoogleAnalytics     1
 BackgroundImageURL  ../main/image/index.gif
